# back/routers/user.router.js
@@ -1,0 +1,13 @@
+const express = require('express');
+const router = express.Router();
+const userController = require('../controllers/user.controller');
+
+
+router.post('/user', userController.createUser);
+router.get('/user/login', userController.loginUser);
+router.get('/user/logout', userController.logoutUser);
+router.get('/user/:userId', userController.getUser);
+router.put('/user/:userId', userController.updateUser);
+router.delete('/user/:userId', userController.deleteUser);
+
+module.exports = router;
